fix: layout on safari (best solution: delete safari, use chrome)

--- a/assets/css/imports/layout.css
+++ b/assets/css/imports/layout.css
@@ -7,7 +7,6 @@ body {
 
 main {
   flex-grow: 1;
-  z-index: 1;
 }
 
 /* page layout container */
@@ -150,4 +149,19 @@ main {
   justify-content: center;
   align-items: center;
   text-align: center;
+}
+
+/* Fix main overflow on footer on safari browser */
+/* https://stackoverflow.com/questions/62075401/safari-grid-in-flexbox-produces-height-overflow */
+/* selector for safari 9+ (see https://browserstrangeness.bitbucket.io/css_hacks.html#safari) */
+@supports (-webkit-hyphens: none) {
+  html,
+  body,
+  main {
+    height: 100%;
+  }
+
+  main {
+    z-index: 1;
+  }
 }
